  - new filter syntax for "find"/"search" etc. with negation
* database
  - simple: scan audio formats
* player
  - "one-shot" single mode
* input
  - curl: download to buffer instead of throttling transfer
  - qobuz: new plugin to play Qobuz streams
  - tidal: new plugin to play Tidal streams
* tags
  - new tags "OriginalDate", "MUSICBRAINZ_WORKID"
* decoder
  - gme: try loading m3u sidecar files
  - hybrid_dsd: new decoder plugin
  - mad: move "gapless_mp3_playback" setting to "decoder" block
  - pcm: support audio/L24 (RFC 3190)
* resampler
  - soxr: flush resampler at end of song
* output
  - alsa: non-blocking mode
  - alsa: change "dop" and "allowed_formats" settings at runtime
  - ao: fix crash bug due to partial frames
  - shout: support the Shine encoder plugin
  - sndio: remove support for the broken RoarAudio sndio emulation
  - osx: initial support for DSD over PCM
* mixer
  - sndio: new mixer plugin
* encoder
  - opus: support for sending metadata using ogg stream chaining
* systemd watchdog support
* require GCC 6

ver 0.20.21 (not yet released)
* database
  - proxy: add "password" setting
  - proxy: support tags "ArtistSort", "AlbumArtistSort", "AlbumSort"
  - simple: allow .mpdignore comments only at start of line
* output
  - httpd: remove broken DLNA support code
* URI schemes are case insensitive

ver 0.20.20 (2018/05/22)
* protocol
  - fix "modified-since" filter regression
* output
  - pulse: cork stream when paused due to "single" mode
* decoder
  - dsdiff, dsf: support more MIME types
  - dsdiff, dsf: allow 4 MB ID3 tags
  - opus: support R128_ALBUM_GAIN tag
* Android, Windows
  - enable the "proxy" database plugin

ver 0.20.19 (2018/04/26)
* protocol
  - validate absolute seek time, reject negative values
* database
  - proxy: fix "search already in progress" errors
  - proxy: implement "list ... group"
* input
  - mms: fix lockup bug and a crash bug
* decoder
  - ffmpeg: fix av_register_all() deprecation warning (FFmpeg 4.0)
* player